supervised_learning/optimization/report.txt
TensorFlow 2.0 Upgrade Script
-----------------------------
Converted 1 files
Detected 0 issues that require attention
--------------------------------------------------------------------------------
================================================================================
Detailed log follows:

================================================================================
--------------------------------------------------------------------------------
Processing file '3-mini_batch.py'
 outputting to '3-mini_batch2.py'
--------------------------------------------------------------------------------

ERROR: Failed to parse.
Traceback (most recent call last):
  File "/home/oem/.local/lib/python3.8/site-packages/tensorflow/tools/compatibility/ast_edits.py", line 940, in update_string_pasta
    t = pasta.parse(text)
  File "/home/oem/.local/lib/python3.8/site-packages/pasta/__init__.py", line 23, in parse
    t = ast_utils.parse(src)
  File "/home/oem/.local/lib/python3.8/site-packages/pasta/base/ast_utils.py", line 56, in parse
    tree = ast.parse(sanitize_source(src))
  File "/usr/lib/python3.8/ast.py", line 47, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 4
    import tensorflow.compat.v1. as tf
                                 ^
SyntaxError: invalid syntax

--------------------------------------------------------------------------------

